--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    //test
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.1'
 }
 
 compileKotlin {
